--- a/fapesp_unicamp_udea.tex
+++ b/fapesp_unicamp_udea.tex
@@ -533,7 +533,17 @@ differential rate of detected events per target particle is given by
 R_{\alpha \beta}=\frac{N_{S}}{32 \pi L^{2} m_{S} m_{T} E_{\nu}} \sum_{k, l} e^{-i \frac{L \Delta m_{k l}^{2}}{2 E_{\nu}}} \int d \prod_{P^{\prime}} \mathcal{M}_{\alpha k}^{P} \overline{\mathcal{M}}_{\alpha l}^{P} \int d \prod_{D} \mathcal{M}_{\beta k}^{D} \overline{\mathcal{M}}_{\beta l}^{D}\,,
 \end{align}
 divided in the three parts of the process,
-where $d\prod_{P} $ is the phase element for the \emph{production} part,  $\Delta m_{k l}^{2} \equiv m_{k}^{2}-m_{l}^{2}$ is the mass squared difference between neutrino eigenstates in the \emph{propagation} part, $d\prod_{D} $ is the phase element for the \emph{detection} part. The amplitudes $\mathcal{M}_{P,D}$ describe the neutrino production and detection processes. Finally, $N_{S,T}$ are the number of source/target particles separated by a macroscopic distance $L$, $m_{S,T}$ are their masses, and $E_\nu$ is the neutrino energy.
+where $d\prod_{P} $ is the phase element for the \emph{production} part,  $\Delta m_{k l}^{2} \equiv m_{k}^{2}-m_{l}^{2}$ is the mass squared difference between neutrino eigenstates in the \emph{propagation} part, $d\prod_{D} $ is the phase element for the \emph{detection} part. The amplitudes $\mathcal{M}_{P,D}$ describe the neutrino production and detection processes. Finally, $N_{S,T}$ are the number of source/target particles separated by a macroscopic distance $L$, $m_{S,T}$ are their masses, and $E_\nu$ is the neutrino energy. In this approach, the
+neutrino is an intermediate particle in the amplitude.
+
+%reformulate
+non-standard neutrino interactions
+\begin{itemize}
+    \item Interactions in the production and detection (mostly charged current)
+    \item Interactions in the propagation (mostly neutral current)
+\end{itemize}
+
+
 
 %improve
 The information about the specific BSM model is encoded in the corresponding  amplitudes $\mathcal{M}_{P,D}$ which can be calculated from the Lagrangian by using the typical QFT techniques. 
@@ -543,15 +553,7 @@ and the NSI contributions proportional the Wilson coefficients $\epsilon_X$, $X=
 
 \begin{ideas}
 
-non-standard neutrino interactions
-\begin{itemize}
-    \item Interactions in the production and detection (mostly charged current)
-    \item Interactions in the propagation (mostly neutral current)
-\end{itemize}
 
-Standard model effective field theories applied to neutrino phenomenology~\cite{1901.04553,1910.02971,2011.14292}.
-Connected directly with~\cite{1901.04553} (\url{https://www.connectedpapers.com/main/61a156d6f312623389f42c0c89fce1b0bf0a700a}) we have also the General neutrino interactions~\cite{1905.08699}, 
-connected with the NSI in radiative neutrino mass models~\cite{1907.09498}
 
 From 1910.02971
 \begin{quote}
@@ -597,6 +599,12 @@ non-SM-like interactions
 \end{quote}
 
 \end{ideas}
+
+
+Standard model effective field theories applied to neutrino phenomenology~\cite{1901.04553,1910.02971,2011.14292}.
+Connected directly with~\cite{1901.04553} (\url{https://www.connectedpapers.com/main/61a156d6f312623389f42c0c89fce1b0bf0a700a}) we have also the General neutrino interactions~\cite{1905.08699}, 
+connected with the NSI in radiative neutrino mass models~\cite{1907.09498}
+
 
 
 %speak about gni
